Anfang Architekture Kapitel

--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -91,6 +91,8 @@
 \pagestyle{scrheadings}
 \onehalfspacing
 \include{Inhalt/04_Inhalt/einleitung}
+\include{Inhalt/04_Inhalt/grundlagen}
+\include{Inhalt/04_Inhalt/transformer}
 
 % ---- Literaturverzeichnis
 \cleardoublepage
