--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -12,7 +12,7 @@
 \setboolean{e-Abgabe}{false}    % false=gedruckte Fassung
 
 % ---- Persönlichen Daten:
-\newcommand{\titel}{Einführung in die Architektur von Transformer-Architekturen von Neuronalen Netzen}
+\newcommand{\titel}{Einführung in Transformer-Architekturen von Neuronalen Netzen}
 \newcommand{\titelheader}{Transformer-Architekturen}
 \newcommand{\arbeit}{Ausarbeitung Integrationsseminar}
 \newcommand{\studiengang}{Wirtschaftsinformatik Software Engineering}
