--- a/Inhalt/04_Inhalt/transformer.tex
+++ b/Inhalt/04_Inhalt/transformer.tex
@@ -90,3 +90,9 @@ Insgesamt kann die Feed-Forward-Schicht mathematisch so ausgedrückt werden:
 \[
 \text{Feed-Forward}(x) = \text{ReLU}(W_1 x + b_1) W_2 + b_2
 \]
+
+\section{Encoder}
+
+\section{Decoder}
+
+\subsection{Cross-Attention}
