--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -94,6 +94,8 @@
 \include{Inhalt/04_Inhalt/grundlagen}
 \include{Inhalt/04_Inhalt/attention}
 \include{Inhalt/04_Inhalt/transformer}
+\include{Inhalt/04_Inhalt/praxis}
+\include{Inhalt/04_Inhalt/fazit}
 
 % ---- Literaturverzeichnis
 \cleardoublepage
