--- a/Inhalt/04_Inhalt/einleitung.tex
+++ b/Inhalt/04_Inhalt/einleitung.tex
@@ -8,7 +8,7 @@ Der Grund, warum Transformer im Bereich der Textanalyse und -verarbeitung so gut
 Sie sind dadurch viel effizienter, schneller und erzielen auch bessere Ergebnisse als alternative Ansätze.  
 Die klassische Transformer-Architektur wurde 2017 in einem Paper mit dem Titel \enquote{Attention is All You Need} vorgestellt.  
 Diese Grundlagen zu verstehen, ermöglicht es auch, bekannte Modelle wie BERT, GPT oder T5 zu verstehen.  
-Ziel dieser Arbeit ist es, dem Leser ohne viel Vorwissen die klassischen Konzepte der Transformer-Architektur zu verdeutlichen.  
+Ziel dieser Arbeit ist es, dem Leser ohne viel Vorwissen die klassischen Konzepte der Transformer-Architektur im Kontext der Textverarbeitung zu verdeutlichen.  
 
 \section{Aufbau der Arbeit}
 
