--- a/Inhalt/04_Inhalt/attention.tex
+++ b/Inhalt/04_Inhalt/attention.tex
@@ -31,7 +31,7 @@ Wenn sich Tokens im Vektorraum nahe liegen, haben sie eher Gemeinsamkeiten im Ve
 Angenommen, es gäbe nur ein \( d_{\text{model}} = 2 \) für jeden Token, könnten diese zwei Dimensionen als Koordinaten genutzt werden, um Zusammenhänge visuell als Cluster in einem Koordinatensystem darzustellen.  
 Hier wären beispielsweise die Tokens \enquote{Hund} und \enquote{Katze} nah beieinander.
 
-Für das oben genannte Beispiel nehmen wir der Übersichtlichkeit halber ein \( d_{\text{model}} = 4 \).  
+Für das oben genannte Beispiel nehmen verwendet das BERT-Model ein \( d_{\text{model}} = 768 \).  
 So ergibt sich eine Embedding-Matrix $\mathbf{X}$ mit 8 Zeilen für 8 Tokens und 768 Spalten für jeweils 768 Dimensionen, die hier der Übersicht halber gekürzt wurden:
 
 \[
